# catalog-sync-api

./: .gitignore  README.md  docker-compose.yml
external-api/: Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  schemas.py
external-api/config/: settings.py
external-api/db/: models.py  postgres.py  requests.py
external-api/routers/: api.py  healthcheck.py
scraper/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  scraper.py
scraper/app/: models.py  scraper.py
scraper/db/: database.py  queries.py  utils.py
scraper/models/: __init__.py  catalogue.py  models.py  service.py
scraper/routers/: healthcheck.py  scraper.py
scraper/tests/: conftest.py  test_scraper.py
